--- a/main.css
+++ b/main.css
@@ -102,6 +102,17 @@ footer {
         font-style: normal;
     }
     
+    .media-icon {
+        display: none;
+        align-items: center;
+        margin-left: auto;
+    }
+    
+    .media-icon img {
+        width: 40px;
+        height: auto;
+    }
+
     .logo img {width: 40px;}
     .menu {display: flex;}
     .menu li {padding-left: 30px;}
